# ex-infralink

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  flake.nix  shell.nix
.github/workflows/: builder.yml  principal.yml  runner.yml  rust.yml  worker.yml
config/principal/: prewarm_rules.yml
envoy/: envoy.yml
models/: Cargo.toml
models/src/models/: health_check.rs  instance.rs  region.rs  rule.rs
nix/: builder.nix  health.nix  principal.nix
principal/: Cargo.toml
principal/docs/: API.md
principal/src/: healer.rs  main.rs  shared_config.rs
principal/src/gpu/: gpu.rs
principal/src/healer/: healer.rs
principal/src/manager/: manager.rs
principal/src/providers/hetzner/models/request/: instance.rs
principal/src/providers/vultr/models/request/: instance.rs  mod.rs  region.rs
principal/src/routes/instance/: create.rs
principal/src/rules/: rule.rs  rules.rs
principal/src/utils/: error.rs
principal/src/volumes/: mod.rs  volume.rs  volumes.rs
prometheus/: prometheus.yml
rollout/: Cargo.toml  build.rs
rollout/src/: main.rs  rollout.rs
rollout/src/proto/: rollout.proto
rollout/src/strategies/: blue_green.rs  exponential.rs  mod.rs
scripts/: clickhouse_connect.sh  manager_data.sh
services/builder/: Cargo.toml  README.md
services/builder/src/: main.rs
services/builder/src/logs/: logs.rs
services/builder/src/webhook/: webhook.rs
services/health-check/: Cargo.toml  Dockerfile
services/health-check/proto/: worker_info.proto
services/health-check/src/: db.rs  health_check.rs  main.rs  worker_info.rs
services/registry/src/: main.rs
services/scaler/: Cargo.toml
services/scaler/src/: main.rs
worker/: Cargo.toml  build.rs
worker/src/: healer.rs  lib.rs  main.rs  mod.rs
worker/src/healer/: healer.rs
worker/src/proto/healer/: healer.proto
