[package]
name = "principal"
version = "0.1.0"
edition = "2021"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = { path = "../models" }
worker = { path = "../worker" }
dotenv = "0.15.0"
serde = { version = "1.0.160", features = ["derive"] }
reqwest = { version = "0.11.16", features = ["rustls-tls", "json", "blocking"] }
dotenv_codegen = "0.15.0"
serde_yaml = "0.9.21"
hyper = { version = "0.14.27", features = ["full"] }
serde_json = "1.0.93"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
lapin = "2.1.1"
tracing = "0.1.37"
tokio-stream = "0.1.14"
tracing-subscriber = "0.3.17"
chrono = "0.4.24"
rand = "0.8.5"
futures-util = "0.3.28"
futures = "0.3.28"
anyhow = "1.0.71"
form_urlencoded = "1.2.0"
redis = { version = "0.23.0", features = [
  "tokio-comp",
  "r2d2",
  "cluster-async",
] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "time"] }