[package]
name = "rollout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18", features = ["macros", "rt-multi-thread"] }
tonic = "0.8.3"
prost = "0.11.8"
tonic-build = "0.8.4"
bollard = "0.14.0"
protobuf = "3.2.0"
surf = "2.3.2"

[build-dependencies]
tonic-build = "0.8.4"