[package]
name = "scaler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.5"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.96"
futures = "0.3.15"
futures-macros = "*"
uuid = { version = "1.3.3", features = ["v4"] }
juniper = "0.15.11"
juniper_warp = "0.7.0"
env_logger = "0.10.0"