[package]
name = "scaler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.5"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.96"
futures = "0.3.15"
futures-macros = "*"
uuid = { version = "1.3.3", features = ["v4"] }
env_logger = "0.10.0"
shiplift = "0.7.0"
reqwest = "0.11.18"
ratelimit_meter = "5.0.0"
prometheus = "0.13.3"
serde = "1.0.164"
dotenv_codegen = "0.15.0"
dotenv = "0.15.0"